--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <h4 class="item-title">Programming Languages</h4>
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">Python / SQL / R
-                  <li class="mb-2">HTML / CSS / JavaScript</li>
+                  <li class="mb-2">JavaScript</li>
                   <li class="mb-2">VBA in Excel</li>
                 </ul>
               </div>
@@ -249,8 +249,8 @@
               <h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
               <ul class="list-unstyled resume-lang-list">
                 <li class="mb-2">English <span class="text-muted">(Professional)</span></li>
-                <li>Mandarin <span class="text-muted">(Native)</span></li>
-		<li>Cantonese <span class="text-muted">(Native)</span></li>
+		<li class="mb-2">Cantonese <span class="text-muted">(Native)</span></li>
+		<li class="mb-2">Mandarin <span class="text-muted">(Native)</span></li>
               </ul>
             </section>
  	    <!-- Interests -->
@@ -271,7 +271,7 @@
 				<hr>
 				<div class="resume-footer text-center">
 					<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/Jerrymzl99</span></a></li>
+					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">https://github.com/Jerrymzl99</span></a></li>
 					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
 				</ul>
 			</div><!--//resume-footer-->
