--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         <div class="row align-items-center">
           <div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
             <h2 class="resume-name mb-0 text-uppercase">Zhelu Mai</h2>
-            <div class="resume-tagline mb-3 mb-md-0">M.S.Business Analytics student of the University of North Texas</div>
+            <div class="resume-tagline mb-3 mb-md-0">M.S. Business Analytics student of the University of North Texas</div>
           </div><!--//resume-title-->
 
           <!-- top right part, four lines of personal information -->
           <div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
             <ul class="list-unstyled mb-0">
               <li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link"
-                                                                                       href="tel:#">9407039518</a>
+                                                                                       href="tel:#">9405959706</a>
               </li>
               <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a
                   class="resume-link" href="mailto:#">zhelumai@my.unt.edu</a></li>
@@ -211,9 +211,9 @@
                   <div class="resume-degree-time text-muted">2020 - Present</div>
                 </li>
                 <li class="mb-3">
-                  <div class="resume-degree font-weight-bold">BS in Maths and Applied Maths</div>
-                  <div class="resume-degree-org text-muted">Shenzhen University</div>
-                  <div class="resume-degree-time text-muted">2017</div>
+                  <div class="resume-degree font-weight-bold">BBA in Finance</div>
+                  <div class="resume-degree-org text-muted">Chu Hai College of Higer Education</div>
+                  <div class="resume-degree-time text-muted">2016</div>
                 </li>
               </ul>
             </section>
