--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-12 col-md-3 col-xl-2 text-center">
             <img alt="image"
                  class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto"
-                 src="assets/images/resume-profile.jpg">
+                 src="assets/images/resume-profile.png">
           </div>
 
           <div class="col text-start">
