--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <title>DevResume - Bootstrap 4 Resume/CV Template For Software Developers</title>
@@ -47,7 +47,7 @@
               <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a
                   class="resume-link" href="mailto:#">zhelumai@my.unt.edu</a></li>
               <li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link"
-                                                                               href="#">resume.link</a>
+                                                                               href="assets/images/Resume v1.pdf">CV</a>
               </li>
               <li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Denton, TX</li>
             </ul>
@@ -67,7 +67,8 @@
           </div>
 
           <div class="col text-start">
-            <p class="mb-0">hehe is here!</p>
+            <p class="mb-0">Responsible and meticulous person with good communication and coordination skills demonstrated by 3 more years of global corporation experience.
+              </p>
           </div><!--//col-->
         </div>
       </div>
@@ -81,7 +82,7 @@
 
             <section class="work-section py-3">
 
-              <h3 class="text-uppercase resume-section-heading mb-4">Working Experiences</h3>
+              <h3 class="text-uppercase resume-section-heading mb-4">News</h3>
 
               <!-- spatiotemporal & context -->
               <div class="item mb-3">
@@ -104,59 +105,19 @@
 
               </div>
 
-              <!-- spatiotemporal & context -->
+
+              <h3 class="text-uppercase resume-section-heading mb-4">Working Experiences</h3>
+
+
+              <!-- Working experience -->
               <div class="item mb-3">
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Analyze context effect of spatiotemporal information
+                    Bank of China (Hong Kong)
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Feb 2021 - Aug 2021
-                  </div>
-                </div>
-
-                <div class="item-content">
-                  <ul class="resume-list">
-                    <li>Lorem ipsum dolor sit amet, consectetuer.</li>
-                    <li>Aenean commodo ligula eget dolor.</li>
-                    <li>Crowdsource using Amazon Mechanical Turk.</li>
-                  </ul>
-                </div>
-
-              </div>
-
-              <!-- spatiotemporal no context -->
-              <div class="item mb-3">
-
-                <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Spatiotemporal Information Extraction
-                  </h4>
-                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Oct 2019 - Feb 2021
-                  </div>
-                </div>
-
-                <div class="item-content">
-                  <ul class="resume-list">
-                    <li>Collect tweet using Tweepy and GetOldTweets3.</li>
-                    <li>Design interface to collect annotations.</li>
-                    <li>Crowdsource using Amazon Mechanical Turk.</li>
-                  </ul>
-                </div>
-
-              </div>
-
-              <!-- travelogue project -->
-              <div class="item mb-3">
-
-                <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Build spatiotemporal graph
-                  </h4>
-                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Sep 2019 - Apr 2021
+                    HK | Nov 2019 - Dec 2020
                   </div>
                 </div>
 
@@ -171,30 +132,57 @@
 
               </div>
 
-              <!-- NLI project -->
+              <!-- Working experience -->
               <div class="item mb-3">
 
                 <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Natural Language Identification
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-2">
+                    Dollar General Global Sourcing Ltd
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    Pitt | Aug 2018 - Dec 2018
+                    HK | Nov 2017 - Jul 2019
                   </div>
                 </div>
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Extract lots of linguistic features, such as part-of-speech tags, stop words, and
-                      punctuation marks, from the TOEFL essays written by English Learners
-                      whose native language is one of eleven languages.
-                    </li>
-                    <li>Tune the parameters using GridSearch with 5-fold cross-validation.</li>
-                    <li>Visualize the confusion matrix of 11 categories.</li>
+                    <li>Followed up standard operating procedures, audited selected departments every two months and amended SOP each year.
+                    <p>
+                    <li>Generated daily, weekly, and monthly reports by Excel VBA for reminding vendors and factories not missing the shipment windows,
+                      such as shipment performance reports for assisting merchants to improve vendors’ shipment accurateness.</li>
+                    <p>
+                    <li>Handled many ad-hoc projects, such as preparing some reports for bargaining prices with the shipping company,
+                      and responsible for Early buying projects that figure out core items that could be shipped in advance to avoid the peak.</li>
+                    <p>
+                    <li>Assisted to merchandise operation development including updating and setting up over 200 vendors’ information a year
                   </ul>
                 </div>
 
               </div>
+
+              <!-- Projects -->
+              <h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
+
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    Event duration of twitter user
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    UNT | Feb 2021 - Aug 2021
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>TBD.</li>
+                    <li>TBD.</li>
+                  </ul>
+                </div>
+
+              </div>
+
 
             </section>
 
@@ -211,7 +199,7 @@
                   <div class="resume-degree-time text-muted">2020 - Present</div>
                 </li>
                 <li class="mb-3">
-                  <div class="resume-degree font-weight-bold">BBA in Finance</div>
+                  <div class="resume-degree font-weight-bold">Bachelor of Business Administration in Finance</div>
                   <div class="resume-degree-org text-muted">Chu Hai College of Higer Education</div>
                   <div class="resume-degree-time text-muted">2016</div>
                 </li>
@@ -227,8 +215,8 @@
                 <h4 class="item-title">Programming Languages</h4>
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">Python / SQL / R
-                  <li class="mb-2">JavaScript</li>
-                  <li class="mb-2">VBA in Excel</li>
+                  <li class="mb-2">JavaScript / HTML</li>
+                  <li class="mb-2">Excel VBA</li>
                 </ul>
               </div>
 
@@ -236,8 +224,8 @@
                 <h4 class="item-title">Tools</h4>
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">scikit-learn / Matplotlib / seaborn</li>
-                  <li class="mb-2">Pandas / Numpy / </li>
-                  <li class="mb-2">Tableau / Qlikview / Rstudio</li>
+                  <li class="mb-2">Pandas / Numpy </li>
+                  <li class="mb-2">Tableau / Qlikview / Rstudio / MySQL</li>
                   <li class="mb-2">Excel / Word / Powerpoint </li>
                   <li class="mb-2"> </li>
                 </ul>
@@ -259,7 +247,7 @@
 		   <h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
 		    <ul class="list-unstyled resume-interests-list mb-0">
 			<li class="mb-2">Basketball</li>
-			<li class="mb-2">Snowboarding</li>
+			<li class="mb-2">Workouts</li>
 			<li class="mb-2">Photography</li>
 			<li>Travelling</li>
 			</ul>
@@ -271,7 +259,7 @@
 				<hr>
 				<div class="resume-footer text-center">
 					<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">https://github.com/Jerrymzl99</span></a></li>
+					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://github.com/Jerrymzl99"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">Jerry Mai</span></a></li>
 					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
 				</ul>
 			</div><!--//resume-footer-->
