--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
-  <title>DevResume - Bootstrap 4 Resume/CV Template For Software Developers</title>
+  <title>ZHELU MAI's Resume</title>
 
   <!-- Meta -->
   <meta charset="utf-8">
