--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
-  <title>ZHELU MAI's Resume</title>
+  <title>ZHELU MAI - University of North Texas</title>
 
   <!-- Meta -->
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta content="Xiaoying Riley at 3rd Wave Media" name="author">
-  <link href="favicon.ico" rel="shortcut icon">
+  <link href="assets/images/UNT.png" rel="shortcut icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
@@ -42,14 +42,17 @@
           <div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
             <ul class="list-unstyled mb-0">
               <li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link"
-                                                                                       href="tel:#">9405959706</a>
+                                                                                       href="tel:#">(940)595-9706</a>
               </li>
               <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a
                   class="resume-link" href="mailto:#">zhelumai@my.unt.edu</a></li>
               <li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link"
                                                                                href="assets/images/Resume v1.pdf">CV</a>
               </li>
-              <li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Denton, TX</li>
+              <li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i><a class="resume-link"
+                                                                                        href="https://goo.gl/maps/QaJMNac7GE9wt45s6">Denton,
+                TX</a></li>
+
             </ul>
           </div><!--//resume-contact-->
         </div><!--//row-->
@@ -67,7 +70,12 @@
           </div>
 
           <div class="col text-start">
-            <p class="mb-0">Responsible and meticulous person with good communication and coordination skills demonstrated by 3 more years of global corporation experience.
+            <p class="mb-0">I am an international student from Hong Kong, pursuing a master's degree
+              from <a href="https://cob.unt.edu/ms-buan">G. Brint Ryan College of Business</a>, <a href="https://www.unt.edu/">University of North Texas</a>.
+              Before a new journey at UNT, I have worked as an analyst in global corporations for almost 3 years,
+              which taught me to be a responsible and meticulous person with good communication and coordination skills.
+              Besides the study and work life, I am also keen on basketball, photography, and workout.
+
               </p>
           </div><!--//col-->
         </div>
@@ -81,29 +89,6 @@
           <div class="resume-main col-12 col-lg-8 col-xl-9   pe-0   pe-lg-5">
 
             <section class="work-section py-3">
-
-              <h3 class="text-uppercase resume-section-heading mb-4">News</h3>
-
-              <!-- spatiotemporal & context -->
-              <div class="item mb-3">
-
-                <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Event duration of twitter user
-                  </h4>
-                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Feb 2021 - Aug 2021
-                  </div>
-                </div>
-
-                <div class="item-content">
-                  <ul class="resume-list">
-                    <li>TBD.</li>
-                    <li>TBD.</li>
-                  </ul>
-                </div>
-
-              </div>
 
 
               <h3 class="text-uppercase resume-section-heading mb-4">Working Experiences</h3>
@@ -123,10 +108,12 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Determine whether the author of the travelogue is located in the mentioned location or not.</li>
-                    <li>Order the visited location in every document of the travelogue.</li>
-                    <li>Error analysis shows that contextual information is essential to order the visited locations.
-                    </li>
+                    <li>Consolidated daily, weekly, and monthly reports via Excel VBA,
+                      such as the report of New and Renew insurance policy, and communicated with branches and BOC insurance company accordingly.</li>
+                    <li>Plotted analysis reports and present to Senior manager,
+                      such as human resource index monthly report that evaluates the situations of each team for staffing, overtime, and absences.</li>
+                    <li>Assisted payroll team to manage payroll issuance for over 600 companies every month, such as daily inquiries handling,
+                      customer’s banking account verification, payroll issuance via internal system, etc.</li>
                   </ul>
                 </div>
 
@@ -136,7 +123,7 @@
               <div class="item mb-3">
 
                 <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
                     Dollar General Global Sourcing Ltd
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
@@ -147,14 +134,12 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Followed up standard operating procedures, audited selected departments every two months and amended SOP each year.
-                    <p>
-                    <li>Generated daily, weekly, and monthly reports by Excel VBA for reminding vendors and factories not missing the shipment windows,
-                      such as shipment performance reports for assisting merchants to improve vendors’ shipment accurateness.</li>
-                    <p>
-                    <li>Handled many ad-hoc projects, such as preparing some reports for bargaining prices with the shipping company,
-                      and responsible for Early buying projects that figure out core items that could be shipped in advance to avoid the peak.</li>
-                    <p>
-                    <li>Assisted to merchandise operation development including updating and setting up over 200 vendors’ information a year
+                    <li>Consolidated daily, weekly, and monthly reports by Excel VBA,
+                    such as shipment performance reports for assisting merchants to improve vendors’ shipment accurateness.</li>
+                    <li>Drew analysis reports and present to direct manager and director,
+                    such as Early buying projects that figure out core items that could be shipped in advance to avoid the peak.</li>
+                    <li>Handled many ad-hoc projects, such as preparing some reports for bargaining prices with the shipping company.</li>
+                    <li>Assisted to merchandise operation development including updating and setting up over 200 vendors’ information a year by the Access.</li>
                   </ul>
                 </div>
 
@@ -167,17 +152,79 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Event duration of twitter user
+                    Data Mining - SAS
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Feb 2021 - Aug 2021
+                    UNT | Summer 2021
                   </div>
                 </div>
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>TBD.</li>
-                    <li>TBD.</li>
+                    <li>Housing Price Prediction ---
+                      examined 80 factors that influence house prices and selected the best model based on ASE in 5 predictive model comparisons .</li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    Data Warehousing Course - MySQL & Qlikview
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    UNT | Spring 2021
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>Reverse engineered the database using ER Model and Multiple Dimensional Model in MySQL Workbench for a company’s workflow of the sellers and buyers,
+                      including the connection from users-sales-products-reviews, etc.</li>
+                    <li>Visualized the above database with data analytics in Qlikview.</li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    Data Visualization Course - Tableau
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    UNT | Spring 2021
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>The Story of the Spread of COVID-19 --- visualize the data with Tableau that how the development of the pandemic has been reached unstoppable situation step by step.</li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    Programming Language for Business Analytics - Python
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    UNT | Spring 2021
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>Titanic Disaster Competition from Kaggle ---
+                      compared few models and used XGBClassifier to reach a Top 5% results of this competition in Kaggle.</li>
+                    <li>Housing Prices Competition from Kaggle ---
+                      compared few models and used GradientBoostingRegressor to reach a Top 9% results of this competition in Kaggle.</li>
                   </ul>
                 </div>
 
@@ -226,7 +273,7 @@
                   <li class="mb-2">scikit-learn / Matplotlib / seaborn</li>
                   <li class="mb-2">Pandas / Numpy </li>
                   <li class="mb-2">Tableau / Qlikview / Rstudio / MySQL</li>
-                  <li class="mb-2">Excel / Word / Powerpoint </li>
+                  <li class="mb-2">Excel / Word / Powerpoint / Access</li>
                   <li class="mb-2"> </li>
                 </ul>
               </div><!--//item-->
