--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a
                   class="resume-link" href="mailto:#">zhelumai@my.unt.edu</a></li>
               <li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link"
-                                                                               href="Resume.pdf">CV</a>
+                                                                               href="assets/images/Resume.pdf">CV</a>
               </li>
               <li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i><a class="resume-link"
                                                                                         href="https://goo.gl/maps/QaJMNac7GE9wt45s6">Denton,
