--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Dollar General Global Sourcing Ltd
+                    Dollar General Global Sourcing Ltd.
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
                     HK | Nov 2017 - Jul 2019
