--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               </div>
 
               <!-- Projects -->
-              <h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
+              <h3 class="text-uppercase resume-section-heading mb-4">Class Projects</h3>
 
               <div class="item mb-3">
 
@@ -172,7 +172,7 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Data Warehousing Course - MySQL & Qlikview
+                    Data Warehousing - MySQL & Qlikview
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
                     UNT | Spring 2021
@@ -193,7 +193,7 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Data Visualization Course - Tableau
+                    Data Visualization - Tableau
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
                     UNT | Spring 2021
@@ -222,9 +222,9 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Titanic Disaster Competition from Kaggle ---
-                      compared few models and used XGBClassifier to reach a Top 5% results of this competition in Kaggle.</li>
+                      compared few models and used XGBClassifier to reach the Top 5% results of this competition in Kaggle.</li>
                     <li>Housing Prices Competition from Kaggle ---
-                      compared few models and used GradientBoostingRegressor to reach a Top 9% results of this competition in Kaggle.</li>
+                      compared few models and used GradientBoostingRegressor to reach the Top 9% results of this competition in Kaggle.</li>
                   </ul>
                 </div>
 
@@ -307,7 +307,7 @@
 				<div class="resume-footer text-center">
 					<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
 					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://github.com/Jerrymzl99"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">Jerry Mai</span></a></li>
-					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
+					<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="linkedin.com/in/mai-zhelu-97634720a"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">ZHELU MAI</span></a></li>
 				</ul>
 			</div><!--//resume-footer-->
 				</article>
