--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           <div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
             <ul class="list-unstyled mb-0">
               <li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link"
-                                                                                       href="tel:#">(940)595-9706</a>
+                                                                                       href="tel:9405959706">(940)595-9706</a>
               </li>
               <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a
-                  class="resume-link" href="mailto:#">zhelumai@my.unt.edu</a></li>
+                  class="resume-link" href="mailto:zhelumai@my.unt.edu">zhelumai@my.unt.edu</a></li>
               <li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link"
                                                                                href="assets/images/Resume.pdf">CV</a>
               </li>
