--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                   <ul class="resume-list">
                     <li>Consolidated daily, weekly, and monthly reports via Excel VBA,
                       such as the report of New and Renew insurance policy, and communicated with branches and BOC insurance company accordingly.</li>
-                    <li>Plotted analysis reports and present to Senior manager,
+                    <li>Plotted analysis reports and present to senior managers,
                       such as human resource index monthly report that evaluates the situations of each team for staffing, overtime, and absences.</li>
                     <li>Assisted payroll team to manage payroll issuance for over 600 companies every month, such as daily inquiries handling,
-                      customer’s banking account verification, payroll issuance via internal system, etc.</li>
+                      customer’s banking account verification, payroll issuance via the internal system, etc.</li>
                   </ul>
                 </div>
 
@@ -133,13 +133,13 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Followed up standard operating procedures, audited selected departments every two months and amended SOP each year.
+                    <li>Followed up standard operating procedures, audited selected departments every two months, and amended SOP each year.
                     <li>Consolidated daily, weekly, and monthly reports by Excel VBA,
                     such as shipment performance reports for assisting merchants to improve vendors’ shipment accurateness.</li>
                     <li>Drew analysis reports and present to direct manager and director,
                     such as Early buying projects that figure out core items that could be shipped in advance to avoid the peak.</li>
                     <li>Handled many ad-hoc projects, such as preparing some reports for bargaining prices with the shipping company.</li>
-                    <li>Assisted to merchandise operation development including updating and setting up over 200 vendors’ information a year by the Access.</li>
+                    <li>Assisted in merchandise operation development including updating and setting up over 200 vendors’ information a year by the Access.</li>
                   </ul>
                 </div>
 
@@ -162,7 +162,7 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Housing Price Prediction ---
-                      examined 80 factors that influence house prices and selected the best model based on ASE in 5 predictive model comparisons .</li>
+                      examined 80 factors that influence house prices and selected the best model based on ASE in 5 predictive model comparisons.</li>
                   </ul>
                 </div>
 
