--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 		   <h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
 		    <ul class="list-unstyled resume-interests-list mb-0">
 			<li class="mb-2">Basketball</li>
-			<li class="mb-2">Workouts</li>
+			<li class="mb-2">Workout</li>
 			<li class="mb-2">Photography</li>
 			<li>Travelling</li>
 			</ul>
