--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Consolidated daily, weekly, and monthly reports via Excel VBA,
-                      such as the report of New and Renew insurance policy, and communicated with branches and BOC insurance company accordingly.</li>
-                    <li>Plotted analysis reports and present to senior managers,
-                      such as human resource index monthly report that evaluates the situations of each team for staffing, overtime, and absences.</li>
+                    <li>Consolidated daily, weekly, and monthly reports via Excel VBA, such as the report of New and Renew insurance policy,
+                      and communicated with branches and BoC insurance company accordingly.</li>
+                    <li>Plotted analysis reports and presented to senior managers, such as human resource index monthly report that
+                      evaluates the situations of each team for staffing, overtime, and absences.</li>
                     <li>Assisted payroll team to manage payroll issuance for over 600 companies every month, such as daily inquiries handling,
-                      customer’s banking account verification, payroll issuance via the internal system, etc.</li>
+                      customer’s banking account verifications, payroll issuance via the internal system, etc.</li>
                   </ul>
                 </div>
 
@@ -136,8 +136,8 @@
                     <li>Followed up standard operating procedures, audited selected departments every two months, and amended SOP each year.
                     <li>Consolidated daily, weekly, and monthly reports by Excel VBA,
                     such as shipment performance reports for assisting merchants to improve vendors’ shipment accurateness.</li>
-                    <li>Drew analysis reports and present to direct manager and director,
-                    such as Early buying projects that figure out core items that could be shipped in advance to avoid the peak.</li>
+                    <li>Drew analysis reports and presented to direct manager and director, such as Early buying projects that
+                      puzzle out core items that could be shipped in advance to avoid the peak.</li>
                     <li>Handled many ad-hoc projects, such as preparing some reports for bargaining prices with the shipping company.</li>
                     <li>Assisted in merchandise operation development including updating and setting up over 200 vendors’ information a year by the Access.</li>
                   </ul>
@@ -202,7 +202,7 @@
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>The Story of the Spread of COVID-19 --- visualize the data with Tableau that how the development of the pandemic has been reached unstoppable situation step by step.</li>
+                    <li>The Story of the Spread of COVID-19 --- visualize the data that how the development of the pandemic has been reached an unstoppable situation step by step with Tableau.</li>
                   </ul>
                 </div>
 
@@ -222,9 +222,9 @@
                 <div class="item-content">
                   <ul class="resume-list">
                     <li>Titanic Disaster Competition from Kaggle ---
-                      compared few models and used XGBClassifier to reach the Top 5% results of this competition in Kaggle.</li>
+                      the performance of the designed XGBClassifier model was ranked among the Top 5% of the leaderboard.</li>
                     <li>Housing Prices Competition from Kaggle ---
-                      compared few models and used GradientBoostingRegressor to reach the Top 9% results of this competition in Kaggle.</li>
+                      the performance of the designed Gradient Boosting Regressor model was ranked among the Top 9% of the leaderboard.</li>
                   </ul>
                 </div>
 
