--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <h4 class="item-title">Tools</h4>
                 <ul class="list-unstyled resume-skills-list">
                   <li class="mb-2">scikit-learn / Matplotlib / seaborn</li>
-                  <li class="mb-2">Pandas / Numpy </li>
+                  <li class="mb-2">Pandas / Numpy / A/B Testing</li>
                   <li class="mb-2">Tableau / Qlikview / Rstudio / MySQL</li>
                   <li class="mb-2">Excel / Word / Powerpoint / Access</li>
                   <li class="mb-2"> </li>
