--- a/index.html
+++ b/index.html
@@ -90,72 +90,17 @@
 
             <section class="work-section py-3">
 
-
-              <h3 class="text-uppercase resume-section-heading mb-4">Working Experiences</h3>
-
-
-              <!-- Working experience -->
-              <div class="item mb-3">
-
-                <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Bank of China (Hong Kong)
-                  </h4>
-                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    HK | Nov 2019 - Dec 2020
-                  </div>
-                </div>
-
-                <div class="item-content">
-                  <ul class="resume-list">
-                    <li>Consolidated daily, weekly, and monthly reports via Excel VBA, such as the report of New and Renew insurance policy,
-                      and communicated with branches and BoC insurance company accordingly.</li>
-                    <li>Plotted analysis reports and presented to senior managers, such as human resource index monthly report that
-                      evaluates the situations of each team for staffing, overtime, and absences.</li>
-                    <li>Assisted payroll team to manage payroll issuance for over 600 companies every month, such as daily inquiries handling,
-                      customer’s banking account verifications, payroll issuance via the internal system, etc.</li>
-                  </ul>
-                </div>
-
-              </div>
-
-              <!-- Working experience -->
-              <div class="item mb-3">
-
-                <div class="item-heading row align-items-center mb-2">
-                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Dollar General Global Sourcing Ltd.
-                  </h4>
-                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    HK | Nov 2017 - Jul 2019
-                  </div>
-                </div>
-
-                <div class="item-content">
-                  <ul class="resume-list">
-                    <li>Followed up standard operating procedures, audited selected departments every two months, and amended SOP each year.
-                    <li>Consolidated daily, weekly, and monthly reports by Excel VBA,
-                    such as shipment performance reports for assisting merchants to improve vendors’ shipment accurateness.</li>
-                    <li>Drew analysis reports and presented to direct manager and director, such as Early buying projects that
-                      puzzle out core items that could be shipped in advance to avoid the peak.</li>
-                    <li>Handled many ad-hoc projects, such as preparing some reports for bargaining prices with the shipping company.</li>
-                    <li>Assisted in merchandise operation development including updating and setting up over 200 vendors’ information a year by the Access.</li>
-                  </ul>
-                </div>
-
-              </div>
-
               <!-- Projects -->
-              <h3 class="text-uppercase resume-section-heading mb-4">Class Projects</h3>
+              <h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
 
               <div class="item mb-3">
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Data Mining - SAS
+                    Personal Loan Project
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Summer 2021
+                    Nov 2021
                   </div>
                 </div>
 
@@ -172,18 +117,18 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Data Warehousing - MySQL & Qlikview
+                    Housing Prices Competition in Kaggle
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Spring 2021
+                    Summer 2021
                   </div>
                 </div>
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Reverse engineered the database using ER Model and Multiple Dimensional Model in MySQL Workbench for a company’s workflow of the sellers and buyers,
-                      including the connection from users-sales-products-reviews, etc.</li>
-                    <li>Visualized the above database with data analytics in Qlikview.</li>
+                    <li>Enhanced more than 5% model accuracy by removing the outliers based on the boxplot via Matplotlib</li>
+                    <li>Combined similar types of features that optimize the model accuracy higher 2.7%</li>
+                    <li>Ranked Top 5% in the leaderboard with the designed GradientBoosting Regressor model in Python</li>
                   </ul>
                 </div>
 
@@ -193,16 +138,16 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Data Visualization - Tableau
+                    Tableau Project
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Spring 2021
+                    Spring 2021
                   </div>
                 </div>
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>The Story of the Spread of COVID-19 --- visualize the data that how the development of the pandemic has been reached an unstoppable situation step by step with Tableau.</li>
+                    <li>Visualize the data by storyline that how the development of the COVID-19 has been reached an unstoppable situation step by step in 2019</li>
                   </ul>
                 </div>
 
@@ -212,19 +157,63 @@
 
                 <div class="item-heading row align-items-center mb-2">
                   <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-                    Programming Language for Business Analytics - Python
+                    Database Reverse Engineering Project
                   </h4>
                   <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-                    UNT | Spring 2021
+                    Spring 2021
                   </div>
                 </div>
 
                 <div class="item-content">
                   <ul class="resume-list">
-                    <li>Titanic Disaster Competition from Kaggle ---
-                      the performance of the designed XGBClassifier model was ranked among the Top 5% of the leaderboard.</li>
-                    <li>Housing Prices Competition from Kaggle ---
-                      the performance of the designed Gradient Boosting Regressor model was ranked among the Top 9% of the leaderboard.</li>
+                    <li>Drew database diagrams in MySQL to show the relationship between seller side and buyer side,
+                      including the connection from users-sales-products-reviews</li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <!-- Header of Working experience -->
+              <h3 class="text-uppercase resume-section-heading mb-4">Working Experiences</h3>
+
+              <!-- Working experience -->
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    Bank of China (Hong Kong)
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    HK | Nov 2019 - Dec 2020
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>Built automatic programs via VBA to deal with 10 daily reports and parts of weekly reports,
+                      saving 19% working time, therefore, I was assigned to help the payroll team in managing payroll issuance every day</li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <!-- Working experience -->
+              <div class="item mb-3">
+
+                <div class="item-heading row align-items-center mb-2">
+                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+                    Dollar General Global Sourcing Ltd
+                  </h4>
+                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+                    HK | Nov 2017 - Jul 2019
+                  </div>
+                </div>
+
+                <div class="item-content">
+                  <ul class="resume-list">
+                    <li>Improved productivity by 25% through developing VBA automatic programs connecting to the Access,
+                      generated 5 daily reports and 7 weekly reports. By doing so I had more time to address ad-hoc projects, etc.</li>
+
                   </ul>
                 </div>
 
@@ -261,20 +250,38 @@
               <div class="item">
                 <h4 class="item-title">Programming Languages</h4>
                 <ul class="list-unstyled resume-skills-list">
-                  <li class="mb-2">Python / SQL / R
-                  <li class="mb-2">JavaScript / HTML</li>
-                  <li class="mb-2">Excel VBA</li>
+                  <li class="mb-2">Python / SQL / R / VBA
+                  <li class="mb-2">JavaScript / HTML5</li>
+                </ul>
+              </div>
+
+              <div class="item">
+                <h4 class="item-title">Data Visualization</h4>
+                <ul class="list-unstyled resume-skills-list">
+                  <li class="mb-2">Tableau / Seaborn / Matplotlib</li>
+                  <li class="mb-2">RStudio / QlikView</li>
+                </ul>
+              </div>
+
+              <div class="item">
+                <h4 class="item-title">Database</h4>
+                <ul class="list-unstyled resume-skills-list">
+                  <li class="mb-2">MySQL / SQL Server / MongoDB</li>
+                </ul>
+              </div>
+
+              <div class="item">
+                <h4 class="item-title">Big Data</h4>
+                <ul class="list-unstyled resume-skills-list">
+                  <li class="mb-2">Hadoop / Spark / Hive / Pig</li>
                 </ul>
               </div>
 
               <div class="item">
                 <h4 class="item-title">Tools</h4>
                 <ul class="list-unstyled resume-skills-list">
-                  <li class="mb-2">scikit-learn / Matplotlib / seaborn</li>
-                  <li class="mb-2">Pandas / Numpy / A/B Testing</li>
-                  <li class="mb-2">Tableau / Qlikview / Rstudio / MySQL</li>
-                  <li class="mb-2">Excel / Word / Powerpoint / Access</li>
-                  <li class="mb-2"> </li>
+                  <li class="mb-2">scikit-learn / Pandas / spaCy</li>
+                  <li class="mb-2">GitHub/ PyCharm</li>
                 </ul>
               </div><!--//item-->
             </section>
@@ -288,17 +295,17 @@
 		<li class="mb-2">Mandarin <span class="text-muted">(Native)</span></li>
               </ul>
             </section>
- 	    <!-- Interests -->
-		</section><!--//certificates-section-->
-		 <section class="skills-section py-3">
-		   <h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
-		    <ul class="list-unstyled resume-interests-list mb-0">
-			<li class="mb-2">Basketball</li>
-			<li class="mb-2">Workout</li>
-			<li class="mb-2">Photography</li>
-			<li>Travelling</li>
-			</ul>
-		</section><!--//certificates-section-->
+<!-- 	    &lt;!&ndash; Interests &ndash;&gt;-->
+<!--		</section>&lt;!&ndash;//certificates-section&ndash;&gt;-->
+<!--		 <section class="skills-section py-3">-->
+<!--		   <h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>-->
+<!--		    <ul class="list-unstyled resume-interests-list mb-0">-->
+<!--			<li class="mb-2">Basketball</li>-->
+<!--			<li class="mb-2">Workout</li>-->
+<!--			<li class="mb-2">Photography</li>-->
+<!--			<li>Travelling</li>-->
+<!--			</ul>-->
+<!--		</section>&lt;!&ndash;//certificates-section&ndash;&gt;-->
 									
 	     </aside><!--//resume-aside-->
 	    	</div><!--//row-->
